--- a/index.html
+++ b/index.html
@@ -6,19 +6,16 @@ projects: passive
 contact: passive
 description: Audrey Kaplan is a C# / Unity Developer in Cedar Park, Texas.
 ---
-<!-- <div class="jumbotron"> -->
 <div class="row marketing">
 	<div class="col-sm-4">
-	<img  class="img-circle avatar" alt="Audrey Kaplan" src="img/profile200.png">
+	<img  class="img-circle avatar" alt="Audrey Kaplan" src="images/profile200.jpg">
 	</div>
 	<div itemscope itemtype="http://data-vocabulary.org/Person" class="col-sm-8">
-	<p class="lead">Hi, I'm <span itemprop="name">Audrey Kaplan</span> and I am a C# / <span itemprop="title">Unity Developer</span>.</p>
+	<p class="lead">Hi! I'm <span itemprop="name">Audrey Kaplan</span> and I am a C# / <span itemprop="title">Unity Developer</span>. I am particularly
+	interested in game development, with a focus on gameplay programming and procedural generation.</p>
 	
-  <p>I have been playing computer games most of my life and this fostered an interest in developing them. I live in in <span itemprop="address" itemscope
-    itemtype="http://data-vocabulary.org/Address"> <span itemprop="locality">Cedar Park</span>, <span itemprop="region">Texas</span></span> and I'm
-    interested in both local and remote working opportunities</p>
-	
-	<p><a href="contact">Contact me</a> if you're interested in working with me.</p>
+	<p>I live in in <span itemprop="address" itemscope itemtype="http://data-vocabulary.org/Address"> <span itemprop="locality">Cedar Park</span>, 
+	<span itemprop="region">Texas</span></span> and I'm interested in both local and remote working opportunities. Here, you can view <a href="projects">
+	my projects</a> and <a href="resume">my resume</a>. If you're interested in working with me, please <a href="contact">contact me</a>!</p>
 	</div>
 </div>
-<!-- </div> -->
