--- a/projects/index.html
+++ b/projects/index.html
@@ -4,10 +4,10 @@ title: Projects
 resume: passive
 projects: active
 contact: passive
-description: Portfolio for Audrey Kaplan, C# / Unity Developer
+description: Projects for Audrey Kaplan, C# / Unity Developer
 ---
-<div class="projects">
-
+<div class="resume">
+    
 	<p>This page is a placeholder for future content.</p>
-
+  
 </div>
