--- a/resume/index.html
+++ b/resume/index.html
@@ -4,11 +4,79 @@ title: Resume
 resume: active
 projects: passive
 contact: passive
-description: Current Resume for Audrey Kaplan
+description: Resume for Audrey Kaplan, C# / Unity Developer
 ---
-
-  <div class="resume">
-    
-    <p>This page is a placeholder for future content.</p>
-  
-  </div>
+<div class="resume">
+<!--
+	<a href="/files/AudreyKaplan_Resume.pdf" class="btn btn-default pull-right" title="Download Resume as PDF">Download Resume (PDF)</a>
+-->   
+	<h1>Audrey Kaplan</h1>
+	<address>
+	<strong>
+	<p>Cedar Park, Texas<br>
+	<span class="obfuscate">moc.liamg@nalpakhtebazileyerdua</span></p>
+	</strong>
+	</address>
+	
+	<h2>Expertise</h2>
+	<dl class="dl-horizontal">
+		<dt>Specialized Skills</dt>
+		<dd>Gameplay Programming, User Interface Programming, Procedural Generation, Vertex/Fragment Shaders, 3D Modeling, Texture Mapping, Image Editing</dd>
+	</dl>
+	<dl class="dl-horizontal">
+		<dt>Programming Languages</dt>
+		<dd>C#, HLSL/CG, C++, OpenGL, Java, Javascript, HTML, CSS</dd>
+	</dl>
+	<dl class="dl-horizontal">
+		<dt>Software</dt>
+		<dd>Unity, Photoshop, GIMP, Maya, Blender, Office, OpenOffice, GitHub Desktop, Sourcetree</dd>
+	</dl>			
+	
+	<h2>Education</h2>
+	<h3><strong>Master of Science, Visualization Sciences</h3>
+	<p>Texas A&M University (College Station, Texas)<br></strong>
+	August 2004 - August 2008</p>
+	<ul>
+		<li>Graduated Magna Cum Laude (GPA 3.8 / 4.0)</li>
+		<li>Awarded King Student Medal for Excellence in Architectural and Environmental Design Research by Architectural Research Centers 
+		Consortium (ARCC) for my Master's Thesis work: “Virtual Reconstruction of a Seventeenth-Century Portuguese Nau,” an interactive 3D 
+		reconstruction of a 1606 ship in conjunction with university's Nautical Archaeology Program.</li>
+	</ul>
+	
+	<h3><strong>Bachelor of Science, Computer Science</h3>
+	<p>University of Mount Union (formerly Mount Union College; Alliance, Ohio)<br></strong>
+	August 2000 - May 2004</p>
+	<ul>
+		<li>Graduated Summa Cum Laude (GPA 3.9 / 4.0)</li>
+		<li>Awarded Computer Science and Information System Alumni Award in Spring 2003</li>
+		<li>Founder and Vice-President of Society of Computing Students (SOCS)</li>
+		<li>Spent Spring 2003 semester abroad at University of Brighton in Brighton, United Kingdom</li>
+		<li>Team lead on senior year software engineering group project to create a computer game with 3D graphics using OpenGL and C++.</li>
+	</ul>
+	
+	<h2>Experience</h2>
+	<h3><strong>Loss Mitigation Specialist</h3>
+	<p>CIT Bank (formerly OneWest Bank; Austin, TX)<br></strong>
+	September 2008 - August 2016</p>
+	<ul>
+		<li>Created new tools and enhanced existing tools to improve team productivity, including a custom Javascript document converter which greatly
+		reduced manual data entry for team members.</li>
+		<li>Performed a variety of duties primarily related to home loan modification operations</li>
+		<li>As designated Subject Matter Expert, I was tasked with documenting company policies and procedures for the entire team.</li>
+	</ul>
+	
+	<h3><strong>Freelance 3D Artist</h3>
+	<p>Texas A&M University (College Station, TX)<br></strong>
+	May 2008 - August 2008</p>
+	<ul>
+		<li>Created 3D models and textures to customer specifications for a short-term project.</li>
+		<li>Provided support for CAVE (computer-assisted virtual environment) systems to display the models and textures on the immersive displays.</li>
+	</ul>
+	
+	<h3><strong>Freelance 3D Artist</h3>
+	<p>Capsher Technology, Inc. (College Station, TX)<br></strong>
+	August 2007 - September 2007</p>
+	<ul>
+		<li>Created 3D models and textures to customer specifications for a short-term project.</li>
+	</ul>
+</div>
