Updates to resume and projects

--- a/404.html
+++ b/404.html
@@ -1,10 +1,14 @@
 ---
 layout: default
 title: 404 Error
+resume: passive
+projects: passive
+contact: passive
+description: 404 Error
 --- 
 
-<div class="error">
-        	<h1>Whoops! You've encounted a 404 Error.</h1>
+<div>
+        	<h2>Whoops! You've encounted a 404 Error.</h2>
         	<p class="lead">Sorry, but the page you're trying to access doesn't exist. Try <a href="/" title="Audrey Kaplan Main Page">going
           back to the main page</a>, or use the navigation menu above to find what you're looking for.</p>
 </div>
