--- a/contact/index.html
+++ b/contact/index.html
@@ -14,7 +14,7 @@ description: Contact information for Audrey Kaplan, C# / Unity Developer
 	<li><a href="http://github.com/audreykaplan">GitHub</a></li>
   	<li><a href="https://www.linkedin.com/in/audreyelizabethkaplan/">LinkedIn</a></li>
 
-	<li>Or by sending an e-mail to <span class="obfuscate">moc.liamg@nalpakhtebazileyerdua</span></li>
+	<li>Or by sending an e-mail to <span class="obfuscate">moc.liamg@nalpaKhtebazilEyerduA</span></li>
 	</ul>
 
 </div>
