--- a/projects/index.html
+++ b/projects/index.html
@@ -6,8 +6,30 @@ projects: active
 contact: passive
 description: Projects for Audrey Kaplan, C# / Unity Developer
 ---
-<div class="resume">
-    
-	<p>This page is a placeholder for future content.</p>
-  
+
+<div class="row marketing">
+	<div class="col-sm-4">
+		<img  class="img-rounded" alt="Paper Alchemist" src="paper_alchemist/images/paper_alchemist_thumb.jpg">
+	</div>
+	
+	<div class="col buffer">
+		<a href="https://sugarskull.itch.io/paper-alchemist" target="_blank" class="btn btn-default pull-right" title="Project Page">Project Page</a>
+		<h3>Paper Alchemist</h3>
+		<h4>A puzzle game created in just one week</h4>
+		<p>I was responsible for the front-end programming, and all art assets. The game was created for a one-week competition and received #1 
+		rating for Design and #2 Overall in competition. Project page with additional screenshots and download link is hosted on itch.io.</p>
+	</div>
+	
+	<div class="col-sm-4">
+		<img  class="img-rounded" alt="Audrey Kaplan's Master Thesis" src="thesis/images/thesis_render_thumb.jpg">
+	</div>
+	
+	<div class="col">
+		<a href="/files/AudreyKaplan_Thesis.pdf" target="_blank" class="btn btn-default pull-right" title="Download Thesis as PDF">Download Thesis (PDF)</a>
+		<h3>Master's Thesis</h3>
+		<h4>Virtual Reconstruction of a Seventeenth-Century Portuguese Nau</h4>
+		<p>An interactive 3D reconstruction of a 1606 ship in conjunction with university's Nautical Archaeology Program. 
+		Awarded King Student Medal for Excellence in Architectural and Environmental Design Research by Architectural 
+		Research Centers Consortium (ARCC).</p>
+	</div>
 </div>
