--- a/resume/index.html
+++ b/resume/index.html
@@ -7,30 +7,45 @@ contact: passive
 description: Resume for Audrey Kaplan, C# / Unity Developer
 ---
 <div class="resume">
-<!--
+
 	<a href="/files/AudreyKaplan_Resume.pdf" class="btn btn-default pull-right" title="Download Resume as PDF">Download Resume (PDF)</a>
--->   
+  
 	<h1>Audrey Kaplan</h1>
 	<address>
 	<strong>
 	<p>Cedar Park, Texas<br>
-	<span class="obfuscate">moc.liamg@nalpakhtebazileyerdua</span></p>
+	<span class="obfuscate">moc.liamg@nalpaKhtebazilEyerduA</span></p>
 	</strong>
 	</address>
 	
 	<h2>Expertise</h2>
 	<dl class="dl-horizontal">
-		<dt>Specialized Skills</dt>
+		<dt>Skills</dt>
 		<dd>Gameplay Programming, User Interface Programming, Procedural Generation, Vertex/Fragment Shaders, 3D Modeling, Texture Mapping, Image Editing</dd>
 	</dl>
 	<dl class="dl-horizontal">
-		<dt>Programming Languages</dt>
+		<dt>Languages</dt>
 		<dd>C#, HLSL/CG, C++, OpenGL, Java, Javascript, HTML, CSS</dd>
 	</dl>
 	<dl class="dl-horizontal">
 		<dt>Software</dt>
-		<dd>Unity, Photoshop, GIMP, Maya, Blender, Office, OpenOffice, GitHub Desktop, Sourcetree</dd>
-	</dl>			
+		<dd>Unity, Photoshop, GIMP, Maya, Blender, Office, OpenOffice, GitHub Desktop</dd>
+	</dl>
+
+	<h2>Recent Projects</h2>
+	<h3><strong>Untitled Mobile Game (C#, HLSL, Unity)</h3></strong>
+	August 2018 - Present</p>
+	<ul>
+		<li>Working on a team with 3 other members, I am fulfilling the role of sole programmer on a mobile game for Android platform in the style of an endless runner.</li>
+		<li>Developed a playable prototype implementing core gameplay features and created fragment and vertex shaders to apply custom visual effects to the game.</li>
+	</ul>
+
+	<h3><strong>"Paper Alchemist" Puzzle Game (C#, Unity, GIMP)</h3></strong>
+	June 2018</p>
+	<ul>
+		<li>Working on a team with 1 other member, I was the front-end programmer and sole artist on a puzzle game developed and published in one week.</li>
+		<li>Game received #1 rating for Design and #2 Overall in competition.</li>
+	</ul>		
 	
 	<h2>Education</h2>
 	<h3><strong>Master of Science, Visualization Sciences</h3>
@@ -38,9 +53,8 @@ description: Resume for Audrey Kaplan, C# / Unity Developer
 	August 2004 - August 2008</p>
 	<ul>
 		<li>Graduated Magna Cum Laude (GPA 3.8 / 4.0)</li>
-		<li>Awarded King Student Medal for Excellence in Architectural and Environmental Design Research by Architectural Research Centers 
-		Consortium (ARCC) for my Master's Thesis work: “Virtual Reconstruction of a Seventeenth-Century Portuguese Nau,” an interactive 3D 
-		reconstruction of a 1606 ship in conjunction with university's Nautical Archaeology Program.</li>
+		<li>Awarded King Student Medal for Excellence in Architectural and Environmental Design Research by Architectural Research Centers Consortium (ARCC) for my 
+		Master's Thesis work, an interactive 3D reconstruction of a 1606 ship in conjunction with the university's Nautical Archaeology Program.</li>
 	</ul>
 	
 	<h3><strong>Bachelor of Science, Computer Science</h3>
@@ -49,12 +63,18 @@ description: Resume for Audrey Kaplan, C# / Unity Developer
 	<ul>
 		<li>Graduated Summa Cum Laude (GPA 3.9 / 4.0)</li>
 		<li>Awarded Computer Science and Information System Alumni Award in Spring 2003</li>
-		<li>Founder and Vice-President of Society of Computing Students (SOCS)</li>
-		<li>Spent Spring 2003 semester abroad at University of Brighton in Brighton, United Kingdom</li>
+		<li>Founder of Society of Computing Students (SOCS)</li>
 		<li>Team lead on senior year software engineering group project to create a computer game with 3D graphics using OpenGL and C++.</li>
 	</ul>
 	
 	<h2>Experience</h2>
+	<h3><strong>Freelance Developer and Artist</h3></strong>
+	<p>August 2018 - Present</p>
+	<ul>
+		<li>Programmer on untitled mobile game in progress in style of an endless runner.</li>
+		<li>Graphic design to customer specifications, including editing of company logos and flyers.</li>
+	</ul>
+	
 	<h3><strong>Loss Mitigation Specialist</h3>
 	<p>CIT Bank (formerly OneWest Bank; Austin, TX)<br></strong>
 	September 2008 - August 2016</p>
