--- a/resume/index.html
+++ b/resume/index.html
@@ -8,7 +8,7 @@ description: Resume for Audrey Kaplan, C# / Unity Developer
 ---
 <div class="resume">
 
-	<a href="/files/AudreyKaplan_Resume.pdf" class="btn btn-default pull-right" title="Download Resume as PDF">Download Resume (PDF)</a>
+	<a href="/files/AudreyKaplan_Resume.pdf" target="_blank" class="btn btn-default pull-right" title="Download Resume as PDF">Download Resume (PDF)</a>
   
 	<h1>Audrey Kaplan</h1>
 	<address>
